✨ Adapt CAD filter for new HTML, add test